# serializer version: 1
# name: TestCreate.test_duplicate[json]
  dict({
    'id': 'bad_request',
    'message': 'Group already exists',
  })
# ---
# name: TestCreate.test_ok[json]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestFind.test_list
  list([
    dict({
      'id': 2,
      'legacy_id': None,
      'name': 'architects',
    }),
    dict({
      'id': 11,
      'legacy_id': None,
      'name': 'Caps',
    }),
    dict({
      'id': 7,
      'legacy_id': None,
      'name': 'chiropractors',
    }),
    dict({
      'id': 10,
      'legacy_id': None,
      'name': 'gaffers',
    }),
    dict({
      'id': 5,
      'legacy_id': None,
      'name': 'herbalists',
    }),
    dict({
      'id': 4,
      'legacy_id': None,
      'name': 'immunologists',
    }),
    dict({
      'id': 8,
      'legacy_id': None,
      'name': 'interpreters',
    }),
    dict({
      'id': 6,
      'legacy_id': None,
      'name': 'lawyers',
    }),
    dict({
      'id': 1,
      'legacy_id': None,
      'name': 'musicians',
    }),
    dict({
      'id': 3,
      'legacy_id': None,
      'name': 'ophthalmologists',
    }),
    dict({
      'id': 9,
      'legacy_id': None,
      'name': 'subs',
    }),
  ])
# ---
# name: TestFind.test_paginate[page_1]
  dict({
    'found_count': 15,
    'items': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'architects',
      }),
      dict({
        'id': 5,
        'legacy_id': None,
        'name': 'Caps',
      }),
      dict({
        'id': 8,
        'legacy_id': None,
        'name': 'chiropractors',
      }),
      dict({
        'id': 13,
        'legacy_id': None,
        'name': 'curators',
      }),
      dict({
        'id': 11,
        'legacy_id': None,
        'name': 'gaffers',
      }),
      dict({
        'id': 6,
        'legacy_id': None,
        'name': 'herbalists',
      }),
      dict({
        'id': 14,
        'legacy_id': None,
        'name': 'illustrators',
      }),
      dict({
        'id': 4,
        'legacy_id': None,
        'name': 'immunologists',
      }),
      dict({
        'id': 9,
        'legacy_id': None,
        'name': 'interpreters',
      }),
      dict({
        'id': 7,
        'legacy_id': None,
        'name': 'lawyers',
      }),
    ]),
    'page': 1,
    'page_count': 2,
    'per_page': 10,
    'total_count': 15,
  })
# ---
# name: TestFind.test_paginate[page_2]
  dict({
    'found_count': 15,
    'items': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
      dict({
        'id': 12,
        'legacy_id': None,
        'name': 'oceanographers',
      }),
      dict({
        'id': 3,
        'legacy_id': None,
        'name': 'ophthalmologists',
      }),
      dict({
        'id': 10,
        'legacy_id': None,
        'name': 'subs',
      }),
      dict({
        'id': 15,
        'legacy_id': None,
        'name': 'toxicologists',
      }),
    ]),
    'page': 2,
    'page_count': 2,
    'per_page': 10,
    'total_count': 15,
  })
# ---
# name: TestUpdate.test
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Technicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    }),
    'users': list([
      dict({
        'handle': 'garciaregina',
        'id': 'da42dca3',
      }),
      dict({
        'handle': 'jacobsjames',
        'id': '7cf872dc',
      }),
      dict({
        'handle': 'modonnell',
        'id': '3cbb22cc',
      }),
    ]),
  })
# ---
# name: TestUpdate.test_not_found[json]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_get[200]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
      dict({
        'handle': 'lindawest',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: test_get[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
